# CS410P_RUST

./: .gitignore  README.md
knock-knock-yew/: Cargo.toml  index.css  index.html
knock-knock-yew/src/: joke.rs  main.rs
rust-web-axum/: .env  .gitignore  .project  Cargo.toml  Dockerfile  docker-compose.yml  questions.json
rust-web-axum/assets/: all_questions.html  edit_question.html  question_template.html  questions_template.html  tell.html  welcome.html
rust-web-axum/migrations/: 20240529200133_create_questions_table.up.sql  20240530154931_create_questions_table.up.sql  20240531032508_create_questions_table.up.sql
rust-web-axum/mysqlDB/: auto.cnf  binlog.000001  binlog.000002  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  mysql_upgrade_history  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
rust-web-axum/mysqlDB/#innodb_redo/: #ib_redo9
rust-web-axum/mysqlDB/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_4.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt  temp_9.ibt
rust-web-axum/mysqlDB/mysql/: general_log_214.sdi  slow_log_215.sdi
rust-web-axum/mysqlDB/performance_schema/: accounts_146.sdi  binary_log_trans_190.sdi  cond_instances_81.sdi  data_lock_waits_162.sdi  data_locks_161.sdi  error_log_82.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_errors_su_144.sdi  events_stages_cu_112.sdi  events_stages_hi_113.sdi  events_stages_hi_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_stages_su_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_123.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_128.sdi  events_statement_129.sdi  events_statement_130.sdi  events_statement_131.sdi  events_transacti_132.sdi  events_transacti_133.sdi  events_transacti_134.sdi  events_transacti_135.sdi  events_transacti_136.sdi  events_transacti_137.sdi  events_transacti_138.sdi  events_transacti_139.sdi  events_waits_cur_83.sdi  (+72 more)
rust-web-axum/mysqlDB/sys/: sys_config.ibd
rust-web-axum/src/: handler.rs  joke.rs  main.rs  model.rs  question.rs  questionbase.rs  response.rs  route.rs  schema.rs
rust-web-axum/src/model/: model.rs  question.rs
rust-web-tokio/: Cargo.toml
rust-web-working/: 404.html  Cargo.toml  hello.html
rust-web2/: Cargo.toml
rust-web3/: Cargo.toml
(+6 files in other folders)
