[package]
name = "knock-knock-yew"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
wasm = "0.0.0"
wasm-bindgen-futures = "0.4"
wasm-cookies = "0.2.1"
web-sys = { version = "0.3.69", features = ["HtmlTextAreaElement"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
