[package]
name = "rust-web-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tracing = "0.1"
web = "0.2.12"
cors = "0.1.0"
route = "0.2.0"
full = "0.1.0"
header = "0.1.1"
method = "0.0.0"
http = "1.1.0"
tower = "0.4.13"
headers = "0.4.0"
