[package]
name = "rust-web-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
postgres = "0.19"
sqlx = { version = "0.7.4", features = ["postgres", "migrate", "runtime-tokio-rustls", "runtime-tokio-native-tls", "runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
axum = "0.7.5"
tracing = "0.1"
web = "0.2.12"
cors = "0.1.0"
route = "0.2.0"
full = "0.1.0"
header = "0.1.1"
method = "0.0.0"
http = "1.1.0"
tower = "0.4.13"
headers = "0.4.0"
anyhow = "1.0.82"
rand = "0.8.5"
dotenv = "0.15.0"